Add properties config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+spring.datasource.url=jdbc:postgresql://localhost:5433/teste
+spring.datasource.username=postgres
+spring.datasource.password=postADMIN
+spring.jpa.hibernate.ddl-auto=update
+
+spring.mustache.suffix=.html
